*changed test to doc *created script for dataset creation *added line to supress TF messages

--- a/doc/CNN.ipynb
+++ b/doc/CNN.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Digit Classification\n",
+    "* Made by modifing an mnist cnn example\n",
+    "* https://machinelearningmastery.com/how-to-develop-a-convolutional-neural-network-from-scratch-for-mnist-handwritten-digit-classification/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
